# git-sidecar

./: Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pr-title.yml  stale.yml
src/: cli.rs  config.rs  exclude.rs  git.rs  layout.rs  main.rs  paths.rs  remote.rs
src/commands/: clone.rs  list.rs  mod.rs  passthrough.rs  remove.rs  sync.rs
tests/: cli.rs
