[package]
name = "git-shadow"
version = "0.0.2"
edition = "2024"
description = "Standalone shadow copies of git repos (or parts of them) in a working directory."
license = "MIT OR Apache-2.0"
repository = "https://github.com/andre-a-alves/git-shadow"
readme = "README.md"
keywords = ["git", "cli", "vendor", "shadow"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "git-shad"
path = "src/main.rs"
